--- a/src/GCodeViewer.WPF.Controls/GCodeViewer.WPF.Controls.csproj
+++ b/src/GCodeViewer.WPF.Controls/GCodeViewer.WPF.Controls.csproj
@@ -11,6 +11,7 @@
     <ProjectReference Include="..\GCodeViewer.WPF.MVVM.Helpers\GCodeViewer.WPF.MVVM.Helpers.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Extended.Wpf.Toolkit" Version="3.8.1" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
