--- a/src/Playground/UserControlTest/UserControlTest.csproj
+++ b/src/Playground/UserControlTest/UserControlTest.csproj
@@ -41,8 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\GCodeViewer.Library\GCodeViewer.Library.csproj" />
-    <ProjectReference Include="..\..\GCodeViewer.WPF.Controls.PointCloud\GCodeViewer.WPF.Controls.PointCloud.csproj" />
     <ProjectReference Include="..\..\GCodeViewer.WPF.Controls.TextEditor\GCodeViewer.WPF.Controls.TextEditor.csproj" />
+    <ProjectReference Include="..\..\GCodeViewer.WPF.Controls.Viewer3D\GCodeViewer.WPF.Controls.Viewer3D.csproj" />
     <ProjectReference Include="..\..\GCodeViewer.WPF.Controls\GCodeViewer.WPF.Controls.csproj" />
   </ItemGroup>
 </Project>
